add functional searchbar

--- a/.env
+++ b/.env
@@ -1,5 +1,14 @@
 GOOGLE_Client_ID = 1062033990176-9uqe78pbcqj853rdls9pdfst7pvkorv4.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET= 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
 
+# firebase
+NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyAOGgI4gnIel8Vzn_PPNBuPOKTvOPowFCA
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=discoverplayers-659d4.firebaseapp.com
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=discoverplayers-659d4
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=discoverplayers-659d4.appspot.com
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=539706815609
+NEXT_PUBLIC_FIREBASE_APP_ID=1:539706815609:web:9954b4865abfadf8fe90a8
+
+
 NEXTAUTH_SECRET="todayisdifficulttommorrowismuchmoredifficult"
 NEXTAUTH_URL = "http://localhost:3000"
