--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-GOOGLE_Client_ID = 1062033990176-9uqe78pbcqj853rdls9pdfst7pvkorv4.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET= 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
+GOOGLE_Client_ID=1062033990176-9uqe78pbcqj853rdls9pdfst7pvkorv4.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
 
 # firebase
 NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyAOGgI4gnIel8Vzn_PPNBuPOKTvOPowFCA
@@ -11,4 +11,4 @@ NEXT_PUBLIC_FIREBASE_APP_ID=1:539706815609:web:9954b4865abfadf8fe90a8
 
 
 NEXTAUTH_SECRET="todayisdifficulttommorrowismuchmoredifficult"
-NEXTAUTH_URL = "http://localhost:3000"
+NEXTAUTH_URL="http://localhost:3000"
